shalinee | TEST | correct alignment of info icon

--- a/apps/web-giddh/src/app/inventory/components/new-branch-transfer/new.branch.transfer.component.scss
+++ b/apps/web-giddh/src/app/inventory/components/new-branch-transfer/new.branch.transfer.component.scss
@@ -430,9 +430,23 @@ tfoot td .table-sec.form-group {
         top: 10px;
     }
 }
-@media(max-width:991px){
+.icon-info-on-table{
+    .icon-info{
+        position: absolute;
+        right: -35px;
+        top: 1px;
+        transform: translateY(16px);
+        font-size: 18px;
+        color: #808080;
+        &.change-position{
+            right: -55px;
+        }
+    }
+}
+/* responsive starts here*/
+@media(max-width:1280px){
     #table-receipt{
-       width: calc(100% - 30px);
+       width: calc(100% - 50px);
     }
 }
 @media(max-width:768px){
